# Temp

./: .gitignore  docker-compose.override.yml  docker-compose.yml  pyproject.toml
config/: .env.template
docker/celery/: worker.sh
docker/django/: Dockerfile
server/: __init__.py  celery_app.py  urls.py
server/apps/: __init__.py
server/apps/main/: forms.py  models.py  tasks.py  urls.py  views.py
server/apps/main/migrations/: 0001_initial.py
server/apps/main/utils/: commands.py
server/settings/: __init__.py
server/settings/components/: common.py  queues.py
server/settings/environments/: development.py
server/templates/: index.html  result.html
